Fixed name alignment in nav bar

--- a/src/sections/Navbar/NavBar.scss
+++ b/src/sections/Navbar/NavBar.scss
@@ -9,6 +9,14 @@
 .nav-link:before {
   transition: all 0.5s;
 }
+.navbar-brand {
+  color: rgba(0, 0, 0, 0.5) !important;
+  .myName {
+    font-size: 1.1rem;
+    font-weight: bold;
+    padding-left: 0.5rem;
+  }
+}
 /* stroke */
 .stroke {
   .nav-link {
@@ -38,5 +46,9 @@
 @media (max-width: 500px) {
   .nav-container {
     padding: 0 1rem;
+  }
+  .navbar {
+    padding: 0.5rem;
+    padding-top: 1.5rem;
   }
 }
